styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

#heading-text {
    text-align: center;
    font-family: Poppins;
}

body {
    background-color: #353b48;
    color: white;
}

#lists {
    font-family: Inter;
}

.loading-wrapper {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background-color: #21242c;
    animation: fadeout 3s ease-in, zindex 3s ease-in;
    animation-fill-mode: forwards;
    margin: 0px;
}

@keyframes fadeout {
    from {opacity: 1; }
    to {opacity: 0; }
  }

@keyframes zindex {
    from {z-index: 3; }
    to {opacity: 0; }
}


.loading-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
    z-index: 100;
    position: absolute;
    top: 45%;
    left: 47%;
  }

  .loading-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid #fff;
    border-color: #fff transparent #fff transparent;
    animation: loading-ring 1.2s linear infinite, fadeout 2s ease-in;
    /* THIS LINE HAS BEEN COMMENTED TO MAKE IT EASIER TO ADJUST THE POSITION OF THE LOADING RING. TO MAKE THE LOADING RING FADE OUT, DELETE THE COMMENT TEXT, THE SEMICOLON ON THE ABOVE LINE, AND THEN COPY AND PASTE THE REMANING TEXT FROM THIS LINE ON THE ABOVE LINE. IT SHOULD LOOK LIKE THIS: 'animation: loading-ring 1.2s linear infinite, fadeout 2s ease-in;' */
    animation-fill-mode: forwards;
  }

  @keyframes loading-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

